# snakemake-executor-plugin-ecflow

./: README.md  activate  pyproject.toml
.github/workflows/: release-please.yml
snakemake_executor_plugin_ecflow/: __init__.py  executor.py  settings.py
tests/: conftest.py  tests.py
tests/custom_testcase/: Snakefile  Snakefile_docs  config.yaml
